Fixing bugs and adding Texas Hold'Em as an example